Feat(api): Return separate stdout, stderr and exit code
