# internal/api/docker.go
@@ -20,7 +20,7 @@ type DockerClient interface {
 	Pause(ctx context.Context, id string) error
 	Resume(ctx context.Context, id string) error
 	RenewExpiration(ctx context.Context, id string, timeout int) error
-	Exec(ctx context.Context, id string, cmd []string) (string, error)
+	Exec(ctx context.Context, id string, cmd []string) (models.ExecResult, error)
 	Logs(ctx context.Context, id string, opts models.LogsOptions) (io.ReadCloser, error)
 	Stats(ctx context.Context, id string) (models.SandboxStats, error)
 	ReadFile(ctx context.Context, id, path string) (string, error)
